fixed path to repo and updated license

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 		<h1>Angular Slider</h1>
 		<h3>Cost: {{item.cost}}</h3>
 		<div slider floor="0" ceiling="1000" step="10" precision="2" ng-model="item.cost"></div>
-		<p><a href="https://github.com/gonzalovazquez/angular-slider.git">Github repo</a></p>
+		<p><a href="https://github.com/usmakestwo/angular-slider">Github repo</a></p>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
