renamed directive and module name

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 	<div ng-controller="ItemCtrl">
 		<h1>Angular Slider</h1>
 		<h3>Cost: {{item.cost}}</h3>
-		<div slider floor="0" ceiling="1000" step="10" precision="2" ng-model="item.cost"></div>
+		<div pretty-slider floor="0" ceiling="1000" step="10" precision="2" ng-model="item.cost"></div>
 		<p><a href="https://github.com/usmakestwo/angular-slider">Github repo</a></p>
 	</div>
 
